--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="team-text-container">
 
     <h1 class="team-title title-medium">
-        Quick list of Our 
-Features
+       <span class="light-gray"> Quick list</span> of Our 
+<span class="orange">Features</span>
     </h1>
    
    
@@ -63,6 +63,38 @@ Features
 <img src="./g3-architects-resources/images/team4.png" alt="">
     </div>
 </Section>
+<section class="cards-first">
+    <div class="cards-first-text">
+<div class="cards">
+    <h1 class="title-medium">Features you will love & enjoy</h1>
+<p class="light-gray">
+    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+</p>
+</div>
+<div class="cards">
+    <h4>Dexktop & Mobile Version</h4>
+    <p class="light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="cards">
+    <h4>Drag & Drop Builder</h4>
+    <p class="light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="cards">
+    <h4>Awesome Modern Design</h4>
+    <p class="light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+<div class="cards">
+    <h4>Super Easy to Edit</h4>
+    <p class="light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+</div>
+
+    </div>
+    <div class="cards-first-picture">
+<img src="./g3-architects-resources/images/architect.png" alt="">
+<button class="btn-large">10+Year <br>
+    <span class="experience">Experience</span> </button>
+    </div>
+</section>
 </main>
 <footer>
 
