added everything without the footer

--- a/index.html
+++ b/index.html
@@ -95,6 +95,48 @@
     <span class="experience">Experience</span> </button>
     </div>
 </section>
+<section class="cards-second">
+   <div class="cards-second-text">
+    <h1 class="title-medium">Some Facts</h1>
+    <p class="light-gray cards-second-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+   </div>
+   <div class="cards-second-picture">
+    <div class="ribon">
+        <img src="./g3-architects-resources/images/icons/ribon.png" alt="">
+        <h1 class="ribon-title">54</h1>
+        <p class="ribon-description">Awards Winnings</p>
+    
+    </div>
+   <div class="projects">
+     <img src="/g3-architects-resources/images/icons/projects.png" alt="">
+     <h1 class="projects-title">1458</h1>
+     <p class="projects-description">Project Finished</p>
+    </div>
+   <div class="customers">
+     <img src="./g3-architects-resources/images/icons/customers.png" alt="">
+     <h1 class="customers-title">590</h1>
+     <p class="customers-description">Clients Worked</p>
+    </div>
+    <div class="email"><img src="./g3-architects-resources/images/icons/email.png" alt="">
+        <h1 class="email-title">22578</h1>
+        <p class="email-description">Email Send</p>
+    </div>
+   </div>
+</section>
+<section class="sponsors-container">
+    <div class="sponsors-text">
+<h1 class="title-medium">Our Sponspors</h1>
+<p class="light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+    <div class="sponsors-picture">
+<img src="./g3-architects-resources/images/sponsors/spotify.png" alt="">
+<img src="./g3-architects-resources/images/sponsors/amazon.png" alt="">
+<img src="./g3-architects-resources/images/sponsors/google.png" alt="">
+<img src="./g3-architects-resources/images/sponsors/telerama.png" alt="">
+<img src="./g3-architects-resources/images/sponsors/figma.png" alt="">
+    </div>
+</section>
+
 </main>
 <footer>
 
