added the footer

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
 </main>
 <footer>
-
+<p class="light-gray">
+    All rights reserved copyright@2023 startup landing page design
+</p>
 </footer>
 </body>
 </html>
